--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
 <body>
   <h1>Welcome to Japan</h1>
   
+  <footer>This project was created by Hiromi Tanimura and is <a href="https://github.com/hiromirhondalee/travel-japan" target="_blank">open-sourced</a>.</footer>
 </body>
 </html>
