Created the header hero of the webpage

--- a/index.html
+++ b/index.html
@@ -14,9 +14,14 @@
     <title>Welcome to Japan</title>
   </head>
   <body>
-    <h1>Welcome to Japan</h1>
-    <h2>The Land of the Rising Sun</h2>
-
+    <div class="container">
+      <header>
+        <h3>.travel.explore.learn.</h3>
+        <h1>Welcome to Japan</h1>
+        <h2>The Land of the Rising Sun</h2>
+        <a href="#more">Learn more</a>
+      </header>
+    </div>
     <footer>
       This project was created by Hiromi Tanimura and is
       <a href="https://github.com/hiromirhondalee/travel-japan" target="_blank"
