--- a/index.html
+++ b/index.html
@@ -23,10 +23,56 @@
       </header>
     </div>
     <footer>
-      This project was created by Hiromi Tanimura and is
-      <a href="https://github.com/hiromirhondalee/travel-japan" target="_blank"
-        >open-sourced</a
-      >.
+      <section class="grid">
+        <div>
+          <h3>More about Japan</h3>
+          <ul>
+            <li>
+              <a
+                href="https://www.japan.travel/en/plan/getting-to-japan/"
+                target="_blank"
+                >Getting to Japan</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://maps.app.goo.gl/jwKymtRxfGBaFg8h7"
+                target="_blank"
+                >Map of Japan</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://www.japan.travel/en/plan/getting-around/"
+                target="_blank"
+                >Getting around Japan</a
+              >
+            </li>
+          </ul>
+        </div>
+        <div>
+          <h3>About me</h3>
+          <p>
+            Hi! My name is Hiromi and I've been living in japan for several
+            years. I'm very fond of the city. I created this page as part of a
+            project for SheCodes Responsive to develop my coding skills.
+          </p>
+        </div>
+        <div>
+          <h3>About this website</h3>
+          <p>
+            I created this page as part of a project for SheCodes Responsive to
+            develop my coding skills.
+            <br />
+            This project was created by Hiromi Tanimura and is
+            <a
+              href="https://github.com/hiromirhondalee/travel-japan"
+              target="_blank"
+              >open-sourced</a
+            >
+          </p>
+        </div>
+      </section>
     </footer>
   </body>
 </html>
