--- a/index.html
+++ b/index.html
@@ -21,58 +21,88 @@
         <h2>The Land of the Rising Sun</h2>
         <a href="#more">Learn more</a>
       </header>
+
+      <main>
+        <section class="grid grid-2-columns">
+          <div>
+            <img src="images/tokyo-city-shibuya.png" alt="tokyo" />
+          </div>
+          <div>
+            <h2>why Japan</h2>
+            <h3>Japan, where culture and traditions meet discovery</h3>
+            <p>
+              From the peaceful temples of Kyoto to the neon lights of Tokyo,
+              Japan offers a harmony of old and new found nowhere else on Earth.
+              Discover a country where respect, craftsmanship, and beauty shape
+              every detail — from tea ceremonies to cutting-edge technology.
+              Whether you come for the food, the culture, or the people, Japan
+              will leave a lasting impression on your heart.
+              <br />
+              <br />
+              From the snowy peaks of Hokkaido to the tropical beaches of
+              Okinawa, every region of Japan offers its own charm and story.
+              Wander through centuries-old streets, savor world-class cuisine,
+              and feel the warmth of omotenashi — Japan’s spirit of hospitality.
+              Wherever you go, you’ll find a country that celebrates both
+              simplicity and sophistication, inviting you to slow down and truly
+              connect with its culture.
+            </p>
+          </div>
+        </section>
+      </main>
+
+      <footer>
+        <section class="grid grid-3-columns-first-narrow">
+          <div>
+            <h3>More about Japan</h3>
+            <ul>
+              <li>
+                <a
+                  href="https://www.japan.travel/en/plan/getting-to-japan/"
+                  target="_blank"
+                  >Getting to Japan</a
+                >
+              </li>
+              <li>
+                <a
+                  href="https://maps.app.goo.gl/jwKymtRxfGBaFg8h7"
+                  target="_blank"
+                  >Map of Japan</a
+                >
+              </li>
+              <li>
+                <a
+                  href="https://www.japan.travel/en/plan/getting-around/"
+                  target="_blank"
+                  >Getting around Japan</a
+                >
+              </li>
+            </ul>
+          </div>
+          <div>
+            <h3>About me</h3>
+            <p>
+              Hi! My name is Hiromi and I've been living in japan for several
+              years. I'm very fond of the city. I created this page as part of a
+              project for SheCodes Responsive to develop my coding skills.
+            </p>
+          </div>
+          <div>
+            <h3>About this website</h3>
+            <p>
+              I created this page as part of a project for SheCodes Responsive
+              to develop my coding skills.
+              <br />
+              This project was created by Hiromi Tanimura and is
+              <a
+                href="https://github.com/hiromirhondalee/travel-japan"
+                target="_blank"
+                >open-sourced</a
+              >
+            </p>
+          </div>
+        </section>
+      </footer>
     </div>
-    <footer>
-      <section class="grid">
-        <div>
-          <h3>More about Japan</h3>
-          <ul>
-            <li>
-              <a
-                href="https://www.japan.travel/en/plan/getting-to-japan/"
-                target="_blank"
-                >Getting to Japan</a
-              >
-            </li>
-            <li>
-              <a
-                href="https://maps.app.goo.gl/jwKymtRxfGBaFg8h7"
-                target="_blank"
-                >Map of Japan</a
-              >
-            </li>
-            <li>
-              <a
-                href="https://www.japan.travel/en/plan/getting-around/"
-                target="_blank"
-                >Getting around Japan</a
-              >
-            </li>
-          </ul>
-        </div>
-        <div>
-          <h3>About me</h3>
-          <p>
-            Hi! My name is Hiromi and I've been living in japan for several
-            years. I'm very fond of the city. I created this page as part of a
-            project for SheCodes Responsive to develop my coding skills.
-          </p>
-        </div>
-        <div>
-          <h3>About this website</h3>
-          <p>
-            I created this page as part of a project for SheCodes Responsive to
-            develop my coding skills.
-            <br />
-            This project was created by Hiromi Tanimura and is
-            <a
-              href="https://github.com/hiromirhondalee/travel-japan"
-              target="_blank"
-              >open-sourced</a
-            >
-          </p>
-        </div>
-      </section>
-    </footer>
   </body>
 </html>
