Added cards to the landing page

--- a/index.html
+++ b/index.html
@@ -49,6 +49,98 @@
             </p>
           </div>
         </section>
+
+        <section class="secondary">
+          <h2 class="text-center">prefectures</h2>
+          <h3 class="text-center">My Favourite Prefectures</h3>
+
+          <div class="grid grid-3-columns">
+            <div class="card">
+              <div class="card-header">
+                <img src="images/hokkaido.png" alt="" class="img-responsive" />
+              </div>
+              <div class="card-body">
+                <h4>Hokkaido</h4>
+                <p>
+                  Hokkaido, Japan’s northernmost island, is known for its
+                  stunning natural beauty — from snowy mountains and vast
+                  forests to colorful flower fields and crystal-clear lakes.
+                </p>
+                <h5>Region</h5>
+
+                <p>Hokkaido</p>
+                <h5>What I like about it</h5>
+                <p>
+                  I like Hokkaido because it feels peaceful and full of natural
+                  beauty. The air is fresh, the scenery changes beautifully with
+                  each season, and the people are warm and welcoming.
+                </p>
+              </div>
+              <div class="card-footer">
+                <a
+                  href="https://www.visit-hokkaido.jp/en/"
+                  class="btn"
+                  target="_blank"
+                  >Learn More</a
+                >
+              </div>
+            </div>
+
+            <div class="card">
+              <div class="card-header">
+                <img src="images/yamagata.png" alt="" class="img-responsive" />
+              </div>
+              <div class="card-body">
+                <h4>Yamagata</h4>
+                <p>
+                 Yamagata is a scenic prefecture in northern Japan, known for its mountains, hot springs, and delicious cherries. It offers a peaceful countryside atmosphere and stunning views in every season, from snowy winters to lush green summers.
+                </p>
+                <h5>Region</h5>
+                <p>Tohoku</p>
+                <h5>What I like about it</h5>
+                <p>
+                  I like Yamagata because it feels calm and genuine, with kind people and a deep connection to nature. It's trulty amazing.
+                </p>
+              </div>
+              <div class="card-footer">
+                <a
+                  href="https://www.tohokukanko.jp/en/yamagata/"
+                  class="btn"
+                  target="_blank"
+                  >Learn More</a
+                >
+              </div>
+            </div>
+
+            <div class="card">
+              <div class="card-header">
+                <img src="images/kagawa.png" alt="" class="img-responsive" />
+              </div>
+              <div class="card-body">
+                <h4>Kagawa</h4>
+                <p>
+              Kagawa, Japan’s smallest prefecture, is famous for its delicious Sanuki udon noodles, beautiful Seto Inland Sea views, and charming art islands like Naoshima. The mix of culture, nature, and food makes it a special place to visit.
+                </p>
+                <h5>Region</h5>
+
+                <p>Shikoku</p>
+                <h5>What I like about it</h5>
+                <p>
+                  I like Kagawa because it feels warm and welcoming, with a
+                  relaxed atmosphere and amazing food everywhere.
+                </p>
+              </div>
+              <div class="card-footer">
+                <a
+                  href="https://www.my-kagawa.jp/en"
+                  class="btn"
+                  target="_blank"
+                  >Learn More</a
+                >
+              </div>
+            </div>
+          </div>
+        </section>
       </main>
 
       <footer>
