Added responsive google map embeds

--- a/index.html
+++ b/index.html
@@ -56,8 +56,20 @@
 
           <div class="grid grid-3-columns">
             <div class="card">
-              <div class="card-header">
-                <img src="images/hokkaido.png" alt="" class="img-responsive" />
+              <div class="card-header grid grid-2-columns">
+                <img
+                  src="images/hokkaido.png"
+                  alt="hokkaido"
+                  class="img-responsive"
+                />
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5975370.520492615!2d132.54195149308265!3d43.006464173668746!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5f9f59209f6c888b%3A0x1c3cc3564fce038f!2sHokkaido!5e0!3m2!1sen!2sjp!4v1762806063031!5m2!1sen!2sjp"
+                  class="embed"
+                  style="border: 0"
+                  allowfullscreen=""
+                  loading="lazy"
+                  referrerpolicy="no-referrer-when-downgrade"
+                ></iframe>
               </div>
               <div class="card-body">
                 <h4>Hokkaido</h4>
@@ -87,19 +99,35 @@
             </div>
 
             <div class="card">
-              <div class="card-header">
-                <img src="images/yamagata.png" alt="" class="img-responsive" />
+              <div class="card-header grid grid-2-columns">
+                <img
+                  src="images/yamagata.png"
+                  alt="yamagata"
+                  class="img-responsive"
+                />
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1599742.4248685418!2d137.7189227456569!3d38.45308763688526!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5f8bec7787e8e26d%3A0xe6dcc4b069648f5e!2sYamagata!5e0!3m2!1sen!2sjp!4v1762806803177!5m2!1sen!2sjp"
+                  class="embed"
+                  style="border: 0"
+                  allowfullscreen=""
+                  loading="lazy"
+                  referrerpolicy="no-referrer-when-downgrade"
+                ></iframe>
               </div>
               <div class="card-body">
                 <h4>Yamagata</h4>
                 <p>
-                 Yamagata is a scenic prefecture in northern Japan, known for its mountains, hot springs, and delicious cherries. It offers a peaceful countryside atmosphere and stunning views in every season, from snowy winters to lush green summers.
+                  Yamagata is a scenic prefecture in northern Japan, known for
+                  its mountains, hot springs, and delicious cherries. It offers
+                  a peaceful countryside atmosphere and stunning views in every
+                  season, from snowy winters to lush green summers.
                 </p>
                 <h5>Region</h5>
                 <p>Tohoku</p>
                 <h5>What I like about it</h5>
                 <p>
-                  I like Yamagata because it feels calm and genuine, with kind people and a deep connection to nature. It's trulty amazing.
+                  I like Yamagata because it feels calm and genuine, with kind
+                  people and a deep connection to nature. It's trulty amazing.
                 </p>
               </div>
               <div class="card-footer">
@@ -113,13 +141,28 @@
             </div>
 
             <div class="card">
-              <div class="card-header">
-                <img src="images/kagawa.png" alt="" class="img-responsive" />
+              <div class="card-header grid grid-2-columns">
+                <img
+                  src="images/kagawa.png"
+                  alt="kagawa"
+                  class="img-responsive"
+                />
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d974835.308834693!2d133.87798374536752!3d34.106797413565076!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3553dcd4acb77eaf%3A0x2d81d6b2899bdab1!2sKagawa!5e0!3m2!1sen!2sjp!4v1762806972685!5m2!1sen!2sjp"
+                  class="embed"
+                  style="border: 0"
+                  allowfullscreen=""
+                  loading="lazy"
+                  referrerpolicy="no-referrer-when-downgrade"
+                ></iframe>
               </div>
               <div class="card-body">
                 <h4>Kagawa</h4>
                 <p>
-              Kagawa, Japan’s smallest prefecture, is famous for its delicious Sanuki udon noodles, beautiful Seto Inland Sea views, and charming art islands like Naoshima. The mix of culture, nature, and food makes it a special place to visit.
+                  Kagawa, Japan’s smallest prefecture, is famous for its
+                  delicious Sanuki udon noodles, beautiful Seto Inland Sea
+                  views, and charming art islands like Naoshima. The mix of
+                  culture, nature, and food makes it a special place to visit.
                 </p>
                 <h5>Region</h5>
 
