Added scroll link to learn more

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </header>
 
       <main>
-        <section class="grid grid-2-columns">
+        <section id="more" class="grid grid-2-columns">
           <div>
             <img src="images/tokyo-city-shibuya.png" alt="tokyo" />
           </div>
@@ -1034,7 +1034,7 @@
                   </p>
                 </div>
               </blockquote>
-              
+
               <script async src="//www.instagram.com/embed.js"></script>
             </div>
           </div>
